[package]
name = "pull_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
toml = "0.5.9"
tokio = { version = "1.20.1", features = ["full"] }
